--- a/Aaru.Decryption.csproj
+++ b/Aaru.Decryption.csproj
@@ -2,6 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Aaru.Decoders\Aaru.Decoders.csproj" />
+      <ProjectReference Include="..\Aaru.Devices\Aaru.Devices.csproj" />
+    </ItemGroup>
 
 </Project>
